Fix focus after an interstitial is destroyed.

When an interstitial is created, it steals the page's focus. When it is
destroyed, it is supposed to return focus to the page, however, since
the WebContents still thinks an interstitial is being displayed, the
RenderWidgetHostImpl tries to maintain the focus on the interstitial.
This CL fixes that by checking whether the interstitial is enabled
before trying to focus it.

Bug: 739676
Change-Id: I9eff1af3cb1500cc3f38400ae9e13e553bb0cf54